# termite-biotech-and-unbounded

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  index.html  pyproject.toml  requirements.txt  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml
chronosend/: package-lock.json  package.json
chronosend/apps/web/: package.json
termite-projects/biofuel-research/business/: README.md
termite-projects/biofuel-research/data/: README.md
termite-projects/src/project-manager/: project_tracker.py
tests/: test_analysis_pipeline.py  test_project_tracker.py  test_validate_data.py  validate_data.py
unbounded/calls/: README.md
unbounded/docs/: README.md
unbounded/share/: README.md
unbounded/site/: README.md  dashboard.html  index.html  manifest.json  portal.html  styles.css  sw.js
unbounded/site/pages/: convert.py  index.html
unbounded/site/pages/calls/: for-creatives.html  for-developers.html  index.html  open-letter.html
unbounded/site/pages/docs/: index.html  manifesto.html  platform-blueprint.html  roadmap.html
unbounded/site/pages/termite/: cross-verification.html  index.html  master-summary.html  readme.html
unbounded/site/pages/unbounded/: contributing.html  governance.html  index.html  welcome.html
unbounded/src/: README.md
